--- a/Areas/Product/Views/ViewProduct/Detail.cshtml
+++ b/Areas/Product/Views/ViewProduct/Detail.cshtml
@@ -74,6 +74,9 @@
             categoryslug = category.Slug
         })
 
+   <hr>
+   <h4>Các sản phẩm liên quan</h4>
+
     <ul class="list-group">
     @foreach (var product in otherProducts)
     {
@@ -83,6 +86,6 @@
             </a>
         </li>
     }
-</ul>    
+   </ul>    
 }
 
