--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -125,6 +125,8 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
+
+                    <partial name="_StatusMessage"/>
                     @RenderBody()
 
                 </div>
